--- a/Scada/default.ini
+++ b/Scada/default.ini
@@ -1,6 +1,6 @@
 [General]
 PageNum=1
-serialPortName=COM1
+serialPortName=COM4
 baudRate=38400
 dataBits=8
 parity=0
@@ -12,11 +12,11 @@ pageName=\x4e3b\x9875\x9762
 row=2
 column=3
 maxLampsNum=10
-meterNum=0
-meterList=@Invalid()
+meterNum=1
+meterList=Channel_13
 lampEnabled=true
-lampNum=1
-lampList=Channel_11
+lampNum=2
+lampList=Channel_11, Channel_12
 Channel_11\name=Channel_11
 Channel_11\title=\x673a\x6cb9\x538b\x529b
 Channel_11\channel=Channel_11
@@ -32,3 +32,47 @@ Channel_11\HighWarning=88
 Channel_11\LowerAlarm=34
 Channel_11\HighAlarm=
 Channel_11\PixmapPath=:/indicator3
+Channel_12\name=Channel_12
+Channel_12\title=\x7f38\x76d6\x6e29\x5ea6
+Channel_12\channel=Channel_12
+Channel_12\pos=8
+Channel_12\type=5
+Channel_12\radius=40
+Channel_12\centerX=0
+Channel_12\centerY=0
+Channel_12\isDigit=true
+Channel_12\isDrawLamp=true
+Channel_12\LowerWarning=
+Channel_12\HighWarning=
+Channel_12\LowerAlarm=
+Channel_12\HighAlarm=
+Channel_12\PixmapPath=:/indicator0
+Channel_13\name=Channel_13
+Channel_13\title=\x53d1\x52a8\x673a\x8f6c\x901fsdf
+Channel_13\channel=Channel_13
+Channel_13\pos=1
+Channel_13\type=3
+Channel_13\unit=N/A
+Channel_13\component=78
+Channel_13\radius=100
+Channel_13\centerX=0
+Channel_13\centerY=0
+Channel_13\startAngle=60
+Channel_13\endAngle=60
+Channel_13\minValue=0
+Channel_13\maxValue=100
+Channel_13\rate=1
+Channel_13\haValue=
+Channel_13\hwValue=
+Channel_13\lwValue=
+Channel_13\laValue=
+Channel_13\scaleMajor=10
+Channel_13\scaleMajorLength=8
+Channel_13\scaleMajorWidth=3
+Channel_13\middleVisible=invisible
+Channel_13\scaleMiddle=5
+Channel_13\scaleMiddleLength=4
+Channel_13\scaleMiddleWidth=2
+Channel_13\scaleMinor=10
+Channel_13\scaleMinorLength=2
+Channel_13\scaleMinorWidth=2
